# api/v1/setting/entity.go
@@ -1,12 +1,12 @@
-package organization
+package setting
 
 import "time"
 
-type Organization struct {
+type Unit struct {
 	ID             int64     `db:"id" json:"id"`
+	UnitID         string    `db:"unit_id" json:"unit_id"`
 	OrganizationID string    `db:"organization_id" json:"organization_id"`
 	Name           string    `db:"name" json:"name"`
-	Owner          string    `db:"owner" json:"owner"`
 	Status         int       `db:"status" json:"status"`
 	Created        time.Time `db:"created" json:"created"`
 	CreatedBy      string    `db:"created_by" json:"created_by"`
